# pacman-g2

lib/libpacman/: Makefile.am  add.c  add.h  be_files.c  conflict.c  conflict.h  handle.c  list.c  list.h  md5.h  md5driver.c  package.c  pacman.c  pacman.h  remove.c  sha1.c  sha1.h  trans.c  trans.h  util.c  util.h
src/pacman-g2/: Makefile.am  trans.c
